--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 </head>
 <body>
   <h1>Hello World!</h1>
+  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 </body>
 </html>
