--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
 
 	<script src="jquery-1.11.2/jquery-1.11.2.js"></script>
 	<script src="//www.parsecdn.com/js/parse-1.4.2.min.js"></script>
-	<!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.3/handlebars.amd.min.js"></script>-->
-	<script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.3/handlebars.min.js"></script>
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	<script src="js/blog.js"></script>
