--- a/admin.html
+++ b/admin.html
@@ -29,7 +29,7 @@
 			<div class="col-sm-8 blog-main">
 				<div class="main-container">
 
-					<script type="text/x-handlebars-template">
+					<script id="login-tpl" type="text/x-handlebars-template">
 						<form class="form-signin" role="form">
 	        				<h2 class="form-signin-heading">Please sign in</h2>
 	        				<label for="inputEmail" class="sr-only">Email address</label>
